java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javadocDeclaration/Link1.java
/**
 * {@link ##my-id label}
 * {@link ##<error descr="Cannot resolve fragment my-other-id">my-other-id</error> label}
 */
class Test {
  /**
   * <div id=my-id></div>
   */
  public void foo() {}

}